--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     padding: 0;
     margin: 0;
 }
+:root{
+    --border-color2: #f9f9f9;
+    --border-color1: #00f;
+    --background-color2: #fff;
+    --background-color1: #333;
+}
 body{
     height: 100vh;
     display: grid;
@@ -79,4 +85,72 @@ body.dark{
     padding: 10px;
     border-radius: 12px;
     background-color: #555;
+}
+
+#container{
+    margin: 100px auto;
+    width: 688px;
+}
+#write{
+    margin: 0 0 5px;
+    padding: 5px;
+    width: 671px;
+    height: 200px;
+    background: var(--background-color2);
+    border: 1px solid var(--border-color2);
+    border-radius: 5px;
+}
+
+#keyboard{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#keyboard li{
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: var(--background-color2);
+    border: 1px solid var(--border-color2);
+    border-radius: 7px;
+}
+.capslock, .tab, .left-shift{
+    clear: left;
+}#keyboard .tab, #keyboard .delete{
+    width: 70px;
+}
+#keyboard .capslock{
+    width: 80px;
+}
+#keyboard .return{
+    width: 77px;
+}
+#keyboard .left-shift{
+    width: 95px;
+}
+#keyboard .right-shift{
+    width: 109px;
+}
+.lastitem{
+    margin-right: 0;
+}
+.uppercase{
+    text-transform: uppercase;
+}
+#keyboard .space{
+    clear: left;
+    width: 681px;
+}
+.on{
+    display: none;
+}
+#keyboard li:hover{
+    position: relative;
+    top: 1px;
+    left: 1px;
+    border-color: #e5e5e5;
+    cursor: pointer;
 }
