--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
     margin: 0;
 }
 :root{
-    --border-color2: #f9f9f9;
-    --border-color1: #00f;
-    --background-color2: #fff;
-    --background-color1: #333;
+    --key-color: #fff;
+    --key-background-color: #777;
+    --key-border-color: #000;
 }
 body{
     height: 100vh;
@@ -89,12 +88,12 @@ body.dark{
 
 #container{
     margin: 100px auto;
-    width: 688px;
+    width: 670px;
 }
 #write{
     margin: 0 0 5px;
     padding: 5px;
-    width: 671px;
+    width: 650px;
     height: 200px;
     background: var(--background-color2);
     border: 1px solid var(--border-color2);
@@ -107,13 +106,14 @@ body.dark{
     list-style: none;
 }
 #keyboard li{
+    color: var(--key-color);
     float: left;
     margin: 0 5px 5px 0;
     width: 40px;
     height: 40px;
     line-height: 40px;
     text-align: center;
-    background: var(--background-color2);
+    background: var(--key-background-color);
     border: 1px solid var(--border-color2);
     border-radius: 7px;
 }
@@ -141,8 +141,7 @@ body.dark{
     text-transform: uppercase;
 }
 #keyboard .space{
-    clear: left;
-    width: 681px;
+    width: 99%;
 }
 .on{
     display: none;
@@ -151,6 +150,6 @@ body.dark{
     position: relative;
     top: 1px;
     left: 1px;
-    border-color: #e5e5e5;
+    outline: var(--key-border-color) 1px solid;
     cursor: pointer;
 }
